change bulgarian to use б instead of Б (keying issue)